force-app/main/default/objects/System_Notification__e/System_Notification__e.object-meta.xml
<CustomObject>
    <description>Event used to notify system events for the app such as errors or important alerts</description>
    <label>System Notification</label>
    <pluralLabel>System Notifications</pluralLabel>
</CustomObject>