force-app/main/default/objects/System_Notification__e/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Error type can be Error, Notification or Warning</description>
    <label>Error Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>