force-app/main/default/objects/System_Notification__e/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <description>Id of the record or error Id</description>
    <label>Identification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>