force-app/main/default/objects/System_Notification__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Text message from error or exception to save publish in the event</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>